--- a/user_data.yaml
+++ b/user_data.yaml
@@ -56,3 +56,4 @@ runcmd:
   - service docker start
   - /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/vsidyakin/remote-scripts/main/install_docker_ubuntu.sh)"
   - curl -fsSL https://raw.githubusercontent.com/vsidyakin/remote-scripts/main/install_docker_ubuntu.sh | bash
+  - touch /home/test.txt
