mixfix01.4 change cloud init command

--- a/cloud01.yaml
+++ b/cloud01.yaml
@@ -39,4 +39,4 @@ runcmd:
   - touch /home/test.txt
 # Install Docker
   #- /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/vsidyakin/remote-scripts/main/debian_install_docker.sh)"
-  - curl -fsSL https://raw.githubusercontent.com/vsidyakin/remote-scripts/main/debian_install_docker.sh | bash
+  #- curl -fsSL https://raw.githubusercontent.com/vsidyakin/remote-scripts/main/debian_install_docker.sh | bash
